src/test/ui/object-safety/object-safety-associated-consts.object_safe_for_dispatch.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-associated-consts.rs:14:5
   |
LL |     const X: usize;
   |           - the trait cannot contain associated consts like `X`
...
LL |     t
   |     ^ the trait `Bar` cannot be made into an object
   |
   = note: required because of the requirements on the impl of `std::ops::CoerceUnsized<&dyn Bar>` for `&T`
   = note: required by cast to type `&dyn Bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
